# kaggle-competition-autonomousvehicles-validation

./: .env.example  .gitignore  .pre-commit-config.yaml  INSTRUCTIONS.md  README.md  WRITEUP.md  apply_fixes.py  debug_app.txt  help_textbox.txt  history_app.patch  models.txt  old_app.py  old_app_utf8.py  output_utf8.txt  prs.json  pyproject.toml  run.json  share_link.txt  test_models.py
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: README.md
assets/knowledge/: av_domain_glossary.md
docs/: test_report.md
docs/implementation/: implementation_plan.md  tasks.md  walkthrough.md
scratch/: apply_css_fixes.py  apply_css_fixes_2.py  apply_css_fixes_3.py  apply_final_fixes.py  apply_fixes.py  apply_graph_and_dark.py  apply_graph_copy.py  apply_traj.py  fix_app_again.py  fix_syntax_errors.py  rewrite_eval.py  rewrite_svg.py  rewrite_tab3.py  test_trajectory_eval.py
src/agent/: __init__.py  agent.py  app.py  config.py  hooks.py  prompts.py
src/skills/: __init__.py  knowledge_retrieval.py
src/skills/kaggle/: pipeline.py
src/skills/knowledge_retrieval/: skill.md
src/skills/pii_redactor/: __init__.py  data_simulator.py  enterprise_av_security_pii_cleaner.py  redactor.py  skill.md  skill.py
src/skills/validation/: __init__.py  label_validator.py  report_generator.py  skill.md  telemetry_validator.py
tests/evaluation/: README.md  __init__.py  conftest.py  golden_dataset.json  golden_dataset.jsonl  test_agent_eval.py  test_app.py  test_data_simulator.py  test_enterprise_av_security_pii_cleaner.py  test_golden_dataset.py  test_kaggle_pipeline.py  test_knowledge_retrieval.py  test_validation_tools.py
tests/evaluation/datasets/: labels_valid.jsonl  pii_redaction.jsonl  telemetry_valid.jsonl
(+13 files in other folders)
