[project]
name = "av-validation-agent"
version = "0.1.0"
description = "Production-grade ADK 2.0 orchestrator agent for Kaggle Autonomous Vehicles Validation"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "google-adk==0.1.0",
    # Fix ADK dependency conflict (relaxed to >=0.48b0)
    "opentelemetry-semantic-conventions>=0.48b0",
    # Required implicitly by google-adk
    "deprecated>=1.2.14",
    # Google Generative AI SDK
    "google-generativeai>=0.8.0",
    # Environment variable loading
    "python-dotenv>=1.0.0",
    # PII detection (Presidio engine)
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    # spaCy model for Presidio NER
    "spacy>=3.7.0",
    # Structured logging
    "structlog>=24.0.0",
    # Data handling
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    # Gradio dashboard frontend
    "gradio>=4.31.0",
    "folium>=0.14.0",
    # Kaggle API Integration
    "kaggle>=1.6.14",
    # HTTP Requests
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

